# fullmag

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  justfile  py_layer_with_hole.vtk  readme.md
.agents/: README.md
.agents/skills/adr-check/: SKILL.md
.agents/skills/capability-matrix-check/: SKILL.md
.agents/skills/physics-publication/: SKILL.md
.agents/skills/problem-ir-design/: SKILL.md
.agents/skills/python-api-class/: SKILL.md
.agents/workflows/: feature-delivery.workflow.md  physics-first-gate.workflow.md  review-physics-completeness.workflow.md
.github/: copilot-instructions.md
.github/agents/: architecture-guardian.agent.md  bootstrap-implementer.agent.md  physics-guardian.agent.md
.github/instructions/: architecture.instructions.md  physics.instructions.md  rust.instructions.md  web.instructions.md
.github/prompts/: create-adr.prompt.md  create-physics-note.prompt.md  spec-to-ir.prompt.md
.github/skills/adr-check/: SKILL.md
.github/skills/capability-matrix-check/: SKILL.md
.github/skills/physics-publication/: SKILL.md
.github/skills/problem-ir-design/: SKILL.md
.github/skills/python-api-class/: SKILL.md
.github/workflows/: bootstrap.yml
apps/web/: dev-server.mjs  external-modules.d.ts  package-lock.json  package.json
apps/web/app/: globals.css  page.tsx
apps/web/hooks/: useKeyboardShortcuts.ts
apps/web/lib/: apiBase.ts  liveApiClient.ts  useSessionStream.ts  useSimulation.ts
crates/fullmag-api/: Cargo.toml
crates/fullmag-api/src/: main.rs
crates/fullmag-cli/: Cargo.toml
crates/fullmag-cli/src/: main.rs
crates/fullmag-engine/: Cargo.toml
crates/fullmag-engine/src/: fem.rs  fem_edge_topology.rs  fem_error_estimator.rs  fem_face_topology.rs  fem_goal_estimator.rs  fem_hcurl_estimator.rs  fem_size_field.rs  lib.rs  multilayer.rs  newell.rs  vector.rs
crates/fullmag-fdm-demag/: Cargo.toml
crates/fullmag-fdm-sys/: Cargo.toml  build.rs
crates/fullmag-fem-sys/: Cargo.toml  build.rs
crates/fullmag-plan/: Cargo.toml
crates/fullmag-py-core/: Cargo.toml
crates/fullmag-runner/: Cargo.toml
crates/fullmag-runner/src/: artifact_pipeline.rs  artifacts.rs  cpu_reference.rs  dispatch.rs  fem_reference.rs  interactive_runtime.rs  lib.rs  multilayer_cuda.rs  multilayer_reference.rs  native_fdm.rs  native_fem.rs  preview.rs  relaxation.rs  scalar_metrics.rs  schedules.rs  types.rs
crates/fullmag-runner/src/interactive/: backend.rs  commands.rs  display.rs  mod.rs  runtime.rs
crates/fullmag-runner/tests/: physics_validation.rs
docker/fem-gpu/: Dockerfile
docs/: 1_project_scope.md  2_repo_blueprint.md
docs/physics/: 0050-shared-problem-semantics-and-embedded-python-api.md  0100-mesh-and-region-discretization.md  0200-llg-exchange-reference-engine.md  0300-gpu-fdm-precision-and-calibration.md  0400-fdm-exchange-demag-zeeman.md  0410-fem-exchange-demag-zeeman-mfem-gpu.md  0420-fdm-dipolar-demag-foundations.md  0421-fdm-multilayer-convolution-demag.md  0500-fdm-relaxation-algorithms.md  0510-fem-relaxation-algorithms-mfem-gpu.md  0520-fem-robin-airbox-demag-bootstrap-reference.md  0550-fdm-sub-cell-staircase-correction.md  README.md
docs/plans/: README.md
docs/reports/: diagnostic_relaxation_stall.md  diagnostyka_solver_brak_relaksacji.md  fullmag_audit_wydajnosc_fdm_fem_vs_boris_mumax.md  fullmag_deep_performance_audit.md  fullmag_diagnostyka_relaksacji.md  fullmag_exchange_comparison_report.md  fullmag_frontend_uiux_audit.md  fullmag_frontend_unification_report.md  fullmag_mumax_like_preview_plan.md  fullmag_preview_switch_latency_report.md
docs/specs/: README.md  capability-matrix-v0.md  exchange-bc-policy-v0.md  exchange-only-full-solver-architecture-v1.md  fullmag-application-architecture-v1.md  fullmag-application-architecture-v2.md  geometry-policy-v0.md  hpc-cluster-execution-v1.md  magnetization-init-policy-v0.md  material-assignment-and-spatial-fields-v0.md  output-naming-policy-v0.md  phase-0-1-implementation-plan.md  problem-ir-v0.md  runtime-distribution-and-managed-backends-v1.md  session-run-api-v1.md  visualization-quantities-v1.md
examples/: dw_track.py  exchange_relax.py  fdm_multibody_two_layer_stack.py  fem_exchange_demag_zeeman.py  generate_layer_with_hole_stl.py  nanoflower_fdm.py  nanoflower_fem.py  py_layer_hole_relax_150nm.py  py_layer_relax.py
native/: CMakeLists.txt  Containerfile
native/backends/fdm/: CMakeLists.txt
native/backends/fdm/include/: context.hpp  kernels.hpp
native/backends/fdm/src/: api.cpp  context.cu  demag_boundary_fp64.cu  demag_fp32.cu  demag_fp64.cu  device_info.cpp  error.cpp  exchange_fp32.cu  exchange_fp64.cu  exchange_t0_fp64.cu  exchange_t1_fp64.cu  llg_abm3_fp32.cu  llg_abm3_fp64.cu  llg_dp45_fp32.cu  llg_dp45_fp64.cu  llg_fp32.cu  llg_fp64.cu  llg_rk23_fp32.cu  llg_rk23_fp64.cu  llg_rk4_fp32.cu  llg_rk4_fp64.cu  newell_gpu_fp32.cu  reductions_fp64.cu
native/backends/fdm/tests/: exchange_fp64_parity.cu  heun_fp64_parity.cu  smoke_context.cpp  tier_a_compare.cu  tier_b_compare.cu
native/backends/fem/: CMakeLists.txt
native/backends/fem/examples/: pa_benchmark.cpp
native/backends/fem/include/: context.hpp  kernels.h
native/backends/fem/src/: api.cpp  context.cpp  kernels.cu  mfem_bridge.cpp
native/include/: fullmag_fdm.h  fullmag_fem.h
run_output/: sequence_manifest.json
scripts/: dev-control-room.sh  export_fem_gpu_runtime.sh  package_fullmag_portable.sh  run_python_ir_smoke.py  stop-control-room.sh  test-cuda-native.sh  validate_portable_bundle.sh
scripts/analysis/: fem_gpu_benchmark.py
(+91 files in other folders)
