[package]
name = "fullmag-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
fullmag-ir = { path = "../fullmag-ir" }
fullmag-plan = { path = "../fullmag-plan" }
fullmag-runner = { path = "../fullmag-runner" }
