[package]
name = "fullmag-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
fullmag-engine = { path = "../fullmag-engine" }
fullmag-ir = { path = "../fullmag-ir" }
fullmag-runner = { path = "../fullmag-runner" }
serde.workspace = true
serde_json.workspace = true
