[package]
name = "fullmag-runner"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
fullmag-engine = { path = "../fullmag-engine" }
fullmag-ir = { path = "../fullmag-ir" }
fullmag-plan = { path = "../fullmag-plan" }
serde = { workspace = true }
serde_json = { workspace = true }
